# masonite_todos_backend_repl

./: command.txt
myapp/: masonite.sqlite3  pyproject.toml  requirements.txt
myapp/app/http/controllers/: TodoController.py
myapp/routes/: web.py
