[tool.poetry]
name = "masoniterep"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
masonite = "^3.0.12"
masonite-logging = "^1.0.1"
masonite-validation = "^3.0.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
